add room jpanel

--- a/DA1/HotelManage/nbproject/private/private.properties
+++ b/DA1/HotelManage/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 user.properties.file=/home/hoang/snap/netbeans/69/build.properties
 project.datechooser=C:\\Users\\Asus\\Desktop\\Git Stuff\\HotelManage\\DA1\\HotelManage
-user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=/home/hoang/snap/netbeans/69/build.properties
